--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Users Lists</title>
     <link rel="stylesheet" href="style.css">
+
+    <style>
+        #search-bar-container {
+            text-align: left;
+            margin: 20px;
+        }
+
+        #search-bar {
+            padding: 10px;
+            width: 300px;
+        }
+    </style>
+
 </head>
+
 <body>
     <div style="text-align: center; margin: 20px 0;">
         <h1>
@@ -13,19 +28,28 @@
         </h1>
     </div>
 
-
-    <div id="user-list"></div>
+    <div class="pm; pb" id="user-list">
+        <div id="search-bar-container">
+            <input type="text" id="search-bar" placeholder="Search users...">
+        </div>
+    </div>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             const userListContainer = document.getElementById('user-list');
+            const searchBar = document.getElementById('search-bar');
             let users = [];
+            let filteredUsers = [];
             let currentIndex = 0;
             const usersPerPage = 10;
 
-            const renderUsers = () => {
-                const endIndex = Math.min(currentIndex + usersPerPage, users.length);
+            const renderUsers = (reset = false) => {
+                if (reset) {
+                    userListContainer.innerHTML = '';
+                    currentIndex = 0;
+                }
+                const endIndex = Math.min(currentIndex + usersPerPage, filteredUsers.length);
                 for (let i = currentIndex; i < endIndex; i++) {
-                    const user = users[i];
+                    const user = filteredUsers[i];
                     const userDiv = document.createElement('div');
                     userDiv.style.display = 'flex';
                     userDiv.style.alignItems = 'center';
@@ -39,7 +63,7 @@
                     userImg.style.marginRight = '10px';
 
                     const userName = document.createElement('p');
-                    userName.innerHTML = `<strong>Username:</strong> ${user.login}`;
+                    userName.innerHTML = ` ${user.login}`;
                     userName.style.margin = 0;
 
                     userDiv.appendChild(userImg);
@@ -47,14 +71,24 @@
                     userListContainer.appendChild(userDiv);
                 }
                 currentIndex = endIndex;
-                if (currentIndex >= users.length) {
-                    document.getElementById('show-more-btn').style.display = 'none';
+                if (currentIndex >= filteredUsers.length) {
+                    const showMoreBtn = document.getElementById('show-more-btn');
+                    if (showMoreBtn) showMoreBtn.style.display = 'none';
                 }
             };
+
+            const filterUsers = () => {
+                const query = searchBar.value.toLowerCase();
+                filteredUsers = users.filter(user => user.login.toLowerCase().includes(query));
+                renderUsers(true);
+            };
+
+            searchBar.addEventListener('input', filterUsers);
 
             try {
                 const response = await fetch('https://api.github.com/users');
                 users = await response.json();
+                filteredUsers = users;
                 renderUsers();
 
                 const showMoreBtn = document.createElement('button');
@@ -64,7 +98,7 @@
                 showMoreBtn.style.margin = '20px auto';
                 showMoreBtn.style.padding = '10px 20px';
                 showMoreBtn.style.cursor = 'pointer';
-                showMoreBtn.addEventListener('click', renderUsers);
+                showMoreBtn.addEventListener('click', () => renderUsers());
                 userListContainer.appendChild(showMoreBtn);
             } catch (error) {
                 userListContainer.innerHTML = '<p>Failed to load users.</p>';
@@ -73,4 +107,5 @@
     </script>
 
 </body>
+
 </html>
