--- a/index.html
+++ b/index.html
@@ -28,10 +28,9 @@
         </h1>
     </div>
 
+    <div id="search-bar-container"><input type="text" id="search-bar" placeholder="Search users..."></div>
+
     <div class="pm; pb" id="user-list">
-        <div id="search-bar-container">
-            <input type="text" id="search-bar" placeholder="Search users...">
-        </div>
     </div>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
